backend/dbms/parser/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ADD'", "'ALTER'", "'AND'", "'AS'", "'ASC'", 
                     "'BETWEEN'", "'BOOL'", "'BOOLEAN'", "'BY'", "'CHAR'", 
                     "'CHECK'", "'COLUMN'", "'COLUMNS'", "'CONSTRAINT'", 
                     "'CREATE'", "'CROSS'", "'DATA'", "'DATABASE'", "'DATABASES'", 
                     "'DATE'", "'DEFAULT'", "'DELETE'", "'DESC'", "'DESCRIBE'", 
                     "'DISTINCT'", "'DOUBLE'", "'DROP'", "'EXISTS'", "'FALSE'", 
                     "'FLOAT'", "'FOREIGN'", "'FROM'", "'GROUP'", "'HAVING'", 
                     "'IF'", "'IN'", "'INDEX'", "'INNER'", "'INSERT'", "'INT'", 
                     "'INTEGER'", "'INTO'", "'IS'", "'JOIN'", "'KEY'", "'LEFT'", 
                     "'LIKE'", "'LIMIT'", "'NOT'", "'NULL'", "'OFFSET'", 
                     "'ON'", "'OR'", "'ORDER'", "'OUTER'", "'PRIMARY'", 
                     "'REAL'", "'REFERENCES'", "'RENAME'", "'RIGHT'", "'SELECT'", 
                     "'SET'", "'SHOW'", "'TABLE'", "'TABLES'", "'TO'", "'TRUE'", 
                     "'TYPE'", "'UNIQUE'", "'UPDATE'", "'USE'", "'VALUES'", 
                     "'VARCHAR'", "'WHERE'", "'='", "<INVALID>", "'<='", 
                     "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'||'", "'('", "')'", "','", "';'", "'.'" ]

    symbolicNames = [ "<INVALID>", "ADD", "ALTER", "AND", "AS", "ASC", "BETWEEN", 
                      "BOOL", "BOOLEAN", "BY", "CHAR", "CHECK", "COLUMN", 
                      "COLUMNS", "CONSTRAINT", "CREATE", "CROSS", "DATA", 
                      "DATABASE", "DATABASES", "DATE", "DEFAULT", "DELETE", 
                      "DESC", "DESCRIBE", "DISTINCT", "DOUBLE", "DROP", 
                      "EXISTS", "FALSE", "FLOAT", "FOREIGN", "FROM", "GROUP", 
                      "HAVING", "IF", "IN", "INDEX", "INNER", "INSERT", 
                      "INT", "INTEGER", "INTO", "IS", "JOIN", "KEY", "LEFT", 
                      "LIKE", "LIMIT", "NOT", "NULL", "OFFSET", "ON", "OR", 
                      "ORDER", "OUTER", "PRIMARY", "REAL", "REFERENCES", 
                      "RENAME", "RIGHT", "SELECT", "SET", "SHOW", "TABLE", 
                      "TABLES", "TO", "TRUE", "TYPE", "UNIQUE", "UPDATE", 
                      "USE", "VALUES", "VARCHAR", "WHERE", "EQ", "NEQ", 
                      "LTE", "GTE", "LT", "GT", "PLUS", "MINUS", "STAR", 
                      "SLASH", "PERCENT", "CONCAT", "LPAREN", "RPAREN", 
                      "COMMA", "SEMI", "DOT", "FLOAT_LIT", "INT_LIT", "STRING_LIT", 
                      "UNTERMINATED_STRING", "IDENTIFIER", "QUOTED_IDENTIFIER", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_script = 0
    RULE_sqlStmt = 1
    RULE_createDatabase = 2
    RULE_dropDatabase = 3
    RULE_alterDatabase = 4
    RULE_useDatabase = 5
    RULE_showDatabases = 6
    RULE_showTables = 7
    RULE_showColumns = 8
    RULE_createTable = 9
    RULE_tableElement = 10
    RULE_columnDef = 11
    RULE_dataType = 12
    RULE_columnConstraint = 13
    RULE_tableConstraint = 14
    RULE_columnList = 15
    RULE_dropTable = 16
    RULE_alterTable = 17
    RULE_alterAction = 18
    RULE_createIndex = 19
    RULE_dropIndex = 20
    RULE_insertStmt = 21
    RULE_valuesRow = 22
    RULE_updateStmt = 23
    RULE_assignment = 24
    RULE_deleteStmt = 25
    RULE_whereClause = 26
    RULE_selectStmt = 27
    RULE_selectList = 28
    RULE_selectItem = 29
    RULE_tableRef = 30
    RULE_joinClause = 31
    RULE_groupByClause = 32
    RULE_havingClause = 33
    RULE_orderByClause = 34
    RULE_orderItem = 35
    RULE_limitClause = 36
    RULE_expr = 37
    RULE_predicate = 38
    RULE_valueExpr = 39
    RULE_functionCall = 40
    RULE_columnRef = 41
    RULE_literal = 42
    RULE_identifier = 43
    RULE_nonReserved = 44

    ruleNames =  [ "script", "sqlStmt", "createDatabase", "dropDatabase", 
                   "alterDatabase", "useDatabase", "showDatabases", "showTables", 
                   "showColumns", "createTable", "tableElement", "columnDef", 
                   "dataType", "columnConstraint", "tableConstraint", "columnList", 
                   "dropTable", "alterTable", "alterAction", "createIndex", 
                   "dropIndex", "insertStmt", "valuesRow", "updateStmt", 
                   "assignment", "deleteStmt", "whereClause", "selectStmt", 
                   "selectList", "selectItem", "tableRef", "joinClause", 
                   "groupByClause", "havingClause", "orderByClause", "orderItem", 
                   "limitClause", "expr", "predicate", "valueExpr", "functionCall", 
                   "columnRef", "literal", "identifier", "nonReserved" ]

    EOF = Token.EOF
    ADD=1
    ALTER=2
    AND=3
    AS=4
    ASC=5
    BETWEEN=6
    BOOL=7
    BOOLEAN=8
    BY=9
    CHAR=10
    CHECK=11
    COLUMN=12
    COLUMNS=13
    CONSTRAINT=14
    CREATE=15
    CROSS=16
    DATA=17
    DATABASE=18
    DATABASES=19
    DATE=20
    DEFAULT=21
    DELETE=22
    DESC=23
    DESCRIBE=24
    DISTINCT=25
    DOUBLE=26
    DROP=27
    EXISTS=28
    FALSE=29
    FLOAT=30
    FOREIGN=31
    FROM=32
    GROUP=33
    HAVING=34
    IF=35
    IN=36
    INDEX=37
    INNER=38
    INSERT=39
    INT=40
    INTEGER=41
    INTO=42
    IS=43
    JOIN=44
    KEY=45
    LEFT=46
    LIKE=47
    LIMIT=48
    NOT=49
    NULL=50
    OFFSET=51
    ON=52
    OR=53
    ORDER=54
    OUTER=55
    PRIMARY=56
    REAL=57
    REFERENCES=58
    RENAME=59
    RIGHT=60
    SELECT=61
    SET=62
    SHOW=63
    TABLE=64
    TABLES=65
    TO=66
    TRUE=67
    TYPE=68
    UNIQUE=69
    UPDATE=70
    USE=71
    VALUES=72
    VARCHAR=73
    WHERE=74
    EQ=75
    NEQ=76
    LTE=77
    GTE=78
    LT=79
    GT=80
    PLUS=81
    MINUS=82
    STAR=83
    SLASH=84
    PERCENT=85
    CONCAT=86
    LPAREN=87
    RPAREN=88
    COMMA=89
    SEMI=90
    DOT=91
    FLOAT_LIT=92
    INT_LIT=93
    STRING_LIT=94
    UNTERMINATED_STRING=95
    IDENTIFIER=96
    QUOTED_IDENTIFIER=97
    LINE_COMMENT=98
    BLOCK_COMMENT=99
    WS=100

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def sqlStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.SqlStmtContext)
            else:
                return self.getTypedRuleContext(SQLParser.SqlStmtContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.SEMI)
            else:
                return self.getToken(SQLParser.SEMI, i)

        def getRuleIndex(self):
            return SQLParser.RULE_script

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript" ):
                return visitor.visitScript(self)
            else:
                return visitor.visitChildren(self)




    def script(self):

        localctx = SQLParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & -6917528477721657340) != 0) or _la==70 or _la==71:
                self.state = 90
                self.sqlStmt()


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==90:
                self.state = 93
                self.match(SQLParser.SEMI)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & -6917528477721657340) != 0) or _la==70 or _la==71:
                    self.state = 94
                    self.sqlStmt()


                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SqlStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createDatabase(self):
            return self.getTypedRuleContext(SQLParser.CreateDatabaseContext,0)


        def dropDatabase(self):
            return self.getTypedRuleContext(SQLParser.DropDatabaseContext,0)


        def alterDatabase(self):
            return self.getTypedRuleContext(SQLParser.AlterDatabaseContext,0)


        def useDatabase(self):
            return self.getTypedRuleContext(SQLParser.UseDatabaseContext,0)


        def showDatabases(self):
            return self.getTypedRuleContext(SQLParser.ShowDatabasesContext,0)


        def showTables(self):
            return self.getTypedRuleContext(SQLParser.ShowTablesContext,0)


        def showColumns(self):
            return self.getTypedRuleContext(SQLParser.ShowColumnsContext,0)


        def createTable(self):
            return self.getTypedRuleContext(SQLParser.CreateTableContext,0)


        def dropTable(self):
            return self.getTypedRuleContext(SQLParser.DropTableContext,0)


        def alterTable(self):
            return self.getTypedRuleContext(SQLParser.AlterTableContext,0)


        def createIndex(self):
            return self.getTypedRuleContext(SQLParser.CreateIndexContext,0)


        def dropIndex(self):
            return self.getTypedRuleContext(SQLParser.DropIndexContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(SQLParser.InsertStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(SQLParser.UpdateStmtContext,0)


        def deleteStmt(self):
            return self.getTypedRuleContext(SQLParser.DeleteStmtContext,0)


        def selectStmt(self):
            return self.getTypedRuleContext(SQLParser.SelectStmtContext,0)


        def getRuleIndex(self):
            return SQLParser.RULE_sqlStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqlStmt" ):
                return visitor.visitSqlStmt(self)
            else:
                return visitor.visitChildren(self)




    def sqlStmt(self):

        localctx = SQLParser.SqlStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sqlStmt)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.createDatabase()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.dropDatabase()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.alterDatabase()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.useDatabase()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.showDatabases()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.showTables()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.showColumns()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 111
                self.createTable()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 112
                self.dropTable()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 113
                self.alterTable()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 114
                self.createIndex()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 115
                self.dropIndex()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 116
                self.insertStmt()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 117
                self.updateStmt()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 118
                self.deleteStmt()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 119
                self.selectStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateDatabaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SQLParser.CREATE, 0)

        def DATABASE(self):
            return self.getToken(SQLParser.DATABASE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQLParser.IdentifierContext,0)


        def IF(self):
            return self.getToken(SQLParser.IF, 0)

        def NOT(self):
            return self.getToken(SQLParser.NOT, 0)

        def EXISTS(self):
            return self.getToken(SQLParser.EXISTS, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_createDatabase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateDatabase" ):
                return visitor.visitCreateDatabase(self)
            else:
                return visitor.visitChildren(self)




    def createDatabase(self):

        localctx = SQLParser.CreateDatabaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createDatabase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SQLParser.CREATE)
            self.state = 123
            self.match(SQLParser.DATABASE)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 124
                self.match(SQLParser.IF)
                self.state = 125
                self.match(SQLParser.NOT)
                self.state = 126
                self.match(SQLParser.EXISTS)


            self.state = 129
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropDatabaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROP(self):
            return self.getToken(SQLParser.DROP, 0)

        def DATABASE(self):
            return self.getToken(SQLParser.DATABASE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQLParser.IdentifierContext,0)


        def IF(self):
            return self.getToken(SQLParser.IF, 0)

        def EXISTS(self):
            return self.getToken(SQLParser.EXISTS, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_dropDatabase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDropDatabase" ):
                return visitor.visitDropDatabase(self)
            else:
                return visitor.visitChildren(self)




    def dropDatabase(self):

        localctx = SQLParser.DropDatabaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dropDatabase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SQLParser.DROP)
            self.state = 132
            self.match(SQLParser.DATABASE)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 133
                self.match(SQLParser.IF)
                self.state = 134
                self.match(SQLParser.EXISTS)


            self.state = 137
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlterDatabaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.old = None # IdentifierContext
            self.new = None # IdentifierContext

        def ALTER(self):
            return self.getToken(SQLParser.ALTER, 0)

        def DATABASE(self):
            return self.getToken(SQLParser.DATABASE, 0)

        def RENAME(self):
            return self.getToken(SQLParser.RENAME, 0)

        def TO(self):
            return self.getToken(SQLParser.TO, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(SQLParser.IdentifierContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_alterDatabase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlterDatabase" ):
                return visitor.visitAlterDatabase(self)
            else:
                return visitor.visitChildren(self)




    def alterDatabase(self):

        localctx = SQLParser.AlterDatabaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_alterDatabase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(SQLParser.ALTER)
            self.state = 140
            self.match(SQLParser.DATABASE)
            self.state = 141
            localctx.old = self.identifier()
            self.state = 142
            self.match(SQLParser.RENAME)
            self.state = 143
            self.match(SQLParser.TO)
            self.state = 144
            localctx.new = self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseDatabaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(SQLParser.USE, 0)

        def identifier(self):
            return self.getTypedRuleContext(SQLParser.IdentifierContext,0)


        def DATABASE(self):
            return self.getToken(SQLParser.DATABASE, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_useDatabase

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseDatabase" ):
                return visitor.visitUseDatabase(self)
            else:
                return visitor.visitChildren(self)




    def useDatabase(self):

        localctx = SQLParser.UseDatabaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_useDatabase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SQLParser.USE)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 147
                self.match(SQLParser.DATABASE)


            self.state = 150
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowDatabasesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(SQLParser.SHOW, 0)

        def DATABASES(self):
            return self.getToken(SQLParser.DATABASES, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_showDatabases

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowDatabases" ):
                return visitor.visitShowDatabases(self)
            else:
                return visitor.visitChildren(self)




    def showDatabases(self):
